syntax = "proto3";

package sample;

message Post {
  string _id = 1;
  string title = 2;
  string image = 3;
}

message Posts {
  int32 page = 1;
  int32 limit = 2;
  int32 count = 3;
  repeated Post data = 4;
}

message Empty {

}

message addPostRequest {
  reserved 1; // _id
  required string title = 2;
  string image = 3;
}

message listPostRequest {
  optional string page = 1 [default = 1];
  optional int32 limit = 2;
  optional string _id = 3;
}

message removePostRequest {
  string _id = 1;
}

service PostService {
  rpc addPost (addPostRequest) returns (Post) {}
  rpc listPosts (listPostRequest) returns (Posts) {}
  rpc removePost (removePostRequest) returns (Empty) {}
}
